# amboss-magma-bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.yaml
.github/workflows/: release.yml
resources/: Login.graphql  schema.graphql  schema.json
resources/graphql/: AcceptOrder.graphql  AddTransaction.graphql  CancelOrder.graphql  CreateApiKey.graphql  GetNodeAddress.graphql  GetSignInfo.graphql  MyOfferOrders.graphql  Orders.graphql  RejectOrder.graphql
src/: api.rs  config.rs  errors.rs  magma.rs  magma.rs.old  main.rs  mempool.rs  node.rs  service.rs  traits.rs
