[package]
name = "magma"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.14"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13"


lnd_grpc_rust = "2.8.0"

[build-dependencies]
tonic-build = "0.12.3"
