[package]
name = "amboss-magma-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Misc:
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
async-trait = "0.1"
hex = "0.4.3"

# Config:
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# GRPC:
tonic = "0.13"
prost = "0.13"  
tokio = { version = "1", features = ["full"] }   
lnd_grpc_rust = "2.10"

# GraphQL:
graphql_client= "0.14.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.13"